// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DomainDetails should render 1`] = `
<div
  class="css-18icqaw"
  data-testid="domain-details"
>
  <div
    class="css-16ehm7c"
  >
    <div
      class="css-1fla85d"
    >
      <div
        class="css-rxg59x"
      >
        2020-02-12 21:44 UTC
      </div>
      <div
        class="css-19d5ki7"
      >
        MODIFIED DATE
      </div>
    </div>
    <div
      class="css-1fla85d"
    >
      <div
        class="css-rxg59x"
      >
        N/A
      </div>
      <div
        class="css-19d5ki7"
      >
        Product ID
      </div>
    </div>
    <div
      class="css-1fla85d"
    >
      <div
        class="css-rxg59x"
      >
        N/A
      </div>
      <div
        class="css-19d5ki7"
      >
        ORGANIZATION
      </div>
    </div>
    <div
      class="css-1fla85d"
    >
      <div
        class="css-rxg59x"
      >
        <div
          class="css-v3lvlk-switch denali-switch"
          data-testid="switch-wrapper"
        >
          <input
            disabled=""
            id="switch-auditDomainDetails"
            name="auditDomainDetails"
            type="checkbox"
            value=""
          />
          <label
            for="switch-auditDomainDetails"
          />
        </div>
      </div>
      <div
        class="css-19d5ki7"
      >
        AUDIT ENABLED
      </div>
    </div>
    <div
      class="css-1fla85d"
    >
      <div
        class="css-rxg59x"
      >
        N/A
      </div>
      <div
        class="css-19d5ki7"
      >
        AWS ACCOUNT ID
      </div>
    </div>
  </div>
</div>
`;

exports[`DomainDetails should render with mock data 1`] = `
<div
  class="css-18icqaw"
  data-testid="domain-details"
>
  <div
    class="css-16ehm7c"
  >
    <div
      class="css-1fla85d"
    >
      <div
        class="css-rxg59x"
      >
        2020-02-12 21:44 UTC
      </div>
      <div
        class="css-19d5ki7"
      >
        MODIFIED DATE
      </div>
    </div>
    <div
      class="css-1fla85d"
    >
      <div
        class="css-rxg59x"
      >
        <div
          class="css-4c0528"
          data-testid="pm-id"
        >
          test
        </div>
      </div>
      <div
        class="css-19d5ki7"
      >
        Product ID
      </div>
    </div>
    <div
      class="css-1fla85d"
    >
      <div
        class="css-rxg59x"
      >
        test
      </div>
      <div
        class="css-19d5ki7"
      >
        ORGANIZATION
      </div>
    </div>
    <div
      class="css-1fla85d"
    >
      <div
        class="css-rxg59x"
      >
        <div
          class="css-v3lvlk-switch denali-switch"
          data-testid="switch-wrapper"
        >
          <input
            checked=""
            disabled=""
            id="switch-auditDomainDetails"
            name="auditDomainDetails"
            type="checkbox"
            value="true"
          />
          <label
            for="switch-auditDomainDetails"
          />
        </div>
      </div>
      <div
        class="css-19d5ki7"
      >
        AUDIT ENABLED
      </div>
    </div>
    <div
      class="css-1fla85d"
    >
      <div
        class="css-rxg59x"
      >
        test
      </div>
      <div
        class="css-19d5ki7"
      >
        AWS ACCOUNT ID
      </div>
    </div>
    <div
      class="css-1fla85d"
    >
      <button
        class="css-1pobclq-button denali-button"
      >
        Onboard to AWS
      </button>
    </div>
  </div>
</div>
`;
